# geoSuctionBot

./: CMakeLists.txt  package.xml
launch/: camera.launch.py  suction.launch.py
msg/: GraspCandidate.msg  SuctionScore.msg
srv/: ComputeSuction.srv  ExecuteGrasp.srv  Segment.srv
ur_suctionbot/: camera_node.py  gui_node.py  knn.py  ransac.py  segmentation_node.py  sobel.py  suction_node.py
